<resources>
    <string name="app_name">project 2</string>
    <string name="reset">Reset</string>
    <string name="free__throw">Free throw</string>
    <string name="_2__points">+2 Points</string>
    <string name="_3__points">+3 Points</string>
    <string name="_0_">0</string>
    <string name="team_b">Team B</string>
    <string name="free_throw">free throw</string>
    <string name="_2_points">+2 Points</string>
    <string name="_3_points">+3 Points</string>
    <string name="_0">0</string>
    <string name="team_a">Team A</string>
    <string name="free_throw1">free throw</string>
    <string name="free_throw0">free throw</string>

</resources>
